chore: Bump dependencies versions

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       continue.</strong>
   </noscript>
   <div id="app"></div>
-  <script type="module" src="./example/main.ts"></script>
+  <script type="module" src="./src/dev-entry/main.ts"></script>
 </body>
 
 </html>
